# blending

./: .gitignore  .yarnrc.yml  Cargo.toml  LICENSE  README.md  package.json  turbo.json
.github/workflows/: build.yml  docs.yml
apps/backend/: Cargo.toml  build.rs  package.json  tauri.conf.json
apps/backend/capabilities/: default.json
apps/backend/icons/: icon.icns
apps/backend/src/: blender.rs  commands.rs  main.rs  scraper.rs
apps/docs/: README.md  astro.config.mjs  package.json  tsconfig.json
apps/docs/src/components/: EmptyTray.astro  ImageCard.astro  MaterialSymbol.astro  TaskBar.astro  Tray.astro  index.ts
apps/docs/src/components/menu/: Menu.module.css  Menu.tsx  MenuItem.module.css  MenuItem.tsx  MenuSeparator.module.css  MenuSeparator.tsx  index.ts
apps/docs/src/content/: config.ts
apps/docs/src/content/docs/: index.mdx
apps/docs/src/content/docs/blog/: test.mdx
apps/docs/src/content/docs/guides/: building.mdx  installation.mdx
apps/docs/src/content/docs/reference/: configuration.mdx  example.mdx
apps/docs/src/styles/: custom.css  theme.css
apps/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  app.css.ts  global.css.ts  i18n.d.ts  index.css  index.tsx
apps/frontend/src/assets/: test.arb
apps/frontend/src/components/onboarding/: context.tsx  index.tsx  onboarding.css.ts  onboarding.tsx
apps/frontend/src/components/onboarding/data/: footer.tsx  page.tsx
apps/frontend/src/components/onboarding/footer/: footer.tsx
apps/website/: package.json
