[workspace]
resolver = "2"
members = [
  "apps/backend",
  "packages/tauri-plugin-ftp",
  "packages/tauri-plugin-dwm",
]

[workspace.package]
authors = ["deminearchiver"]
edition = "2021"
license = "ISC"

[workspace.dependencies]
tauri-plugin-ftp = { path = "packages/tauri-plugin-ftp" }
tauri-plugin-dwm = { path = "packages/tauri-plugin-dwm" }
