[package]
name = "blender-launcher"
version = "0.0.0"
description = "Blender Launcher"
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-window-state = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"
csscolorparser = { version = "0.6", features = ["named-colors", "serde"] }
semver = "1.0"
webview2-com-sys = "0.28"
suppaftp = { version = "5.3"}

tauri-plugin-ftp.workspace = true

[dependencies.windows-core]
version = "0.52"

[dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation"
]
