[package]
name = "blending"
version = "0.0.0"
description = "Blender Launcher"
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
resvg = "0.41"
reqwest = { version = "0.12", features = ["blocking"] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-window-state = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-autostart = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"
csscolorparser = { version = "0.6", features = ["named-colors", "serde"] }
semver = "1.0"
webview2-com-sys = "0.29"
suppaftp = { version = "5.3"}
url = "2"
notify = "6"

tauri-plugin-ftp.workspace = true

windows-core = "0.54"

[dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation"
]
